Добавление файлов для конфигурации модуля и связь с родительским

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,8 @@
 	</developers>
     <modules>
 		<module>yclients-integration</module>
-	</modules>
+        <module>bot</module>
+    </modules>
     <scm>
 		<connection/>
 		<developerConnection/>
